EXTRA_DIST = cocoa_util.m  DeSmuME.cbp  globals.h  main.mm  main_window.h  main_window.mm nds_control.h nds_control.mm preferences.mm \
	about.m DeSmuME.icns Info.plist InfoPlist.strings input.h input.mm \
	makeapp.sh PkgInfo preferences.h screenshot.h screenshot.mm \
	screen_state.h screen_state.m sndOSX.h sndOSX.mm video_output_view.h video_output_view.mm \
	DeSmuME.xcodeproj/project.pbxproj Rakefile \
	dialogs/rom_info.h dialogs/rom_info.m dialogs/speed_limit_selection_window.h dialogs/speed_limit_selection_window.mm \
	translations/English.lproj/Localizable.strings translations/English.lproj/MainMenu.nib/classes.nib \
	translations/English.lproj/MainMenu.nib/info.nib translations/English.lproj/MainMenu.nib/keyedobjects.nib \
	translations/French.lproj/Localizable.strings translations/French.lproj/MainMenu.nib/classes.nib \
	translations/French.lproj/MainMenu.nib/info.nib translations/French.lproj/MainMenu.nib/keyedobjects.nib \
	translations/Italian.lproj/Localizable.strings translations/Italian.lproj/MainMenu.nib/classes.nib \
	translations/Italian.lproj/MainMenu.nib/info.nib translations/Italian.lproj/MainMenu.nib/keyedobjects.nib \
	translations/Japanese.lproj/Localizable.strings translations/Japanese.lproj/MainMenu.nib/classes.nib \
	translations/Japanese.lproj/MainMenu.nib/info.nib translations/Japanese.lproj/MainMenu.nib/keyedobjects.nib
